fix scalable on iphone

--- a/src/assets/scss/media/media.scss
+++ b/src/assets/scss/media/media.scss
@@ -23,7 +23,7 @@
   .input {
     &__field {
       padding: 10px 12px;
-      font-size: 14px;
+      font-size: 16px;
       &--area {
         padding: 15px 12px;
       }
@@ -34,7 +34,7 @@
   }
 
   ::placeholder {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .btn__submit {
